--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,13 @@
 Ylja Remmits
 Richard Vankoningsveld
 Petrina Collingwood
+Carlos Martinez
+Elizabeth Wickes
+Elaine Wong
+Mark Laufersweiler
+Jason Ellis
+Sarah Clayton
+slynnf
 James Allen
 Piotr Banaszkiewicz
 Andy Boughton
