--- a/AUTHORS
+++ b/AUTHORS
@@ -7,7 +7,7 @@ Elaine Wong
 Mark Laufersweiler
 Jason Ellis
 Sarah Clayton
-slynnf
+Sarah Lynn Fisher
 James Allen
 Piotr Banaszkiewicz
 Andy Boughton
